--- a/web/contact/index.html
+++ b/web/contact/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <p>
-    email: <a href="mailto:horacio@monocromatico.com.mx">horacio@monocromatico.com.mx</a><br>
-    pgp: <a href="https://keybase.io/horacio_ramirez">keybase.io/horacio_ramirez</a>
+    email: <a href="mailto:h.think071@slmail.me">h.think071@slmail.me</a><br>
     </p>
 </body>
 </html>
