--- a/web/index.html
+++ b/web/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>horacio ramirez</title>
     <link rel="stylesheet" href="css/styles.css">
-    
 </head>
 <body class="home">
     <div class="p-3">
-   <h1>horacio.ramirez</h1>
-   <h2>design — web development</h2>
+    <h1>horacio ramirez</h1>
+    <h2>design — web development</h2>
     <ul class="navigation">
-        <li><a class="mr-0" href="/resume">/résumé</a> <a href="/pdf/horacio_ramirez-resume-2025.pdf">(pdf)</a></li>
+        <li><a class="mr-0" href="/resume">/resume</a></li>
         <li><a href="/contact">/contact</a></li>
         <li><a href="/sandbox">/sandbox</a></li>
         <li><a href="/etc">/etc</a></li>
