--- a/web/resume/index.html
+++ b/web/resume/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body class="resume">
-    <div class="row">
+    <div class="row d-none-print">
         <nav>
             <ul class="d-flex flex-row">
                 <li><a style="color:white" href="/">Go back</a></li>
-                <li><a style="color:white" href="/pdf/horacio_ramirez-resume-2025.pdf">Download as PDF</a></li>
+                <li><a style="color:white" href="/resume/pdf/horacio_ramirez-resume-2025.pdf">Download as PDF</a></li>
             </ul>
         </nav>
     </div>
@@ -24,7 +24,7 @@
                 <h1 class="mb-4">Horacio Ramirez</h1>
                 <p class="ff-monospace mt-0 mb-4">
                     Solutions Architect & Tech Lead<br>
-                    <a class="ff-monospace" href="mailto:h.sandbox772@simplelogin.com">h.sandbox772@simplelogin.com</a><br>
+                    <a class="ff-monospace" href="mailto:h.sandbox772@simplelogin.com">h.think071@slmail.me</a><br>
                 </p>
                 <div class="resume-summary mt-5">
                     <h2 class="ff-libre">Summary</h2>
