--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <h1>horacio ramirez</h1>
     <h2>design — web development</h2>
     <ul class="navigation">
-        <li><a class="mr-0" href="/resume">/resume</a></li>
+        <li><a href="/resume">/resume</a></li>
         <li><a href="/contact">/contact</a></li>
         <li><a href="/sandbox">/sandbox</a></li>
         <li><a href="/etc">/etc</a></li>
