--- a/web/sandbox/index.html
+++ b/web/sandbox/index.html
@@ -6,27 +6,33 @@
     <title>Sandbox</title>
 </head>
 <body>
+    <h3>idea testing</h3>
     <ul>
         <li>
-            <a href="#">Cards</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, dolorem explicabo? Dolores quisquam molestiae exercitationem! Nihil odit debitis qui facere?</p>
-            <a href="#">Code</a>
+            <a href="./noise-gen/">Noise Generator</a>
+            <span>2025.07.09</span>
+            <p>Noise texture generator for CSS</p>
         </li>
         <li>
-            <a href="#">Speech recognition</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, dolorem explicabo? Dolores quisquam molestiae exercitationem! Nihil odit debitis qui facere?</p>
-            <a href="#">Code</a>
+            <a href="./pantone/">Pantone</a>
+            <span>2025.07.01</span>
+            <p>Parametrized gradient background generator on elements specified elements</p>
         </li>
         <li>
-            <a href="#">Visual Audio Processing</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, dolorem explicabo? Dolores quisquam molestiae exercitationem! Nihil odit debitis qui facere?</p>
-            <a href="#">Code</a>
+            <a href="./visual-audio-processing/">Visual Audio Processing</a>
+            <span>2025.06.15</span>
+            <p>Simple implementation to understand audio processing with P5.js library</p>
         </li>
         <li>
-            <a href="#">Temporary file and text sharing</a>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, dolorem explicabo? Dolores quisquam molestiae exercitationem! Nihil odit debitis qui facere?</p>
-            <a href="#">Code</a>
+            <a href="./honorarios/">Honorarios Calculator</a>
+            <span>2025.01.01</span>
+            <p>Calculator for mexican invoices with isr/iva retentions.</p>
         </li>
     </ul>
+
+    <h3>todo</h3>
+    <ul>
+        <li>Anon Text/file sharing tool pastebin like</li>
+        <li>Cryptographic signature</li>
 </body>
 </html>
