--- a/web/sandbox/index.html
+++ b/web/sandbox/index.html
@@ -6,33 +6,51 @@
     <title>Sandbox</title>
 </head>
 <body>
-    <h3>idea testing</h3>
-    <ul>
-        <li>
-            <a href="./noise-gen/">Noise Generator</a>
-            <span>2025.07.09</span>
-            <p>Noise texture generator for CSS</p>
-        </li>
-        <li>
-            <a href="./pantone/">Pantone</a>
-            <span>2025.07.01</span>
-            <p>Parametrized gradient background generator on elements specified elements</p>
-        </li>
-        <li>
-            <a href="./visual-audio-processing/">Visual Audio Processing</a>
-            <span>2025.06.15</span>
-            <p>Simple implementation to understand audio processing with P5.js library</p>
-        </li>
-        <li>
-            <a href="./honorarios/">Honorarios Calculator</a>
-            <span>2025.01.01</span>
-            <p>Calculator for mexican invoices with isr/iva retentions.</p>
-        </li>
-    </ul>
+    
+    <main class="p-3">
+        <div class="row">
+            
+            <div class="col-12">
+                <ul>
+                     <li>
+                        <a href="./dyn-figure">Dynamic Logo</a> <span>2025.07.17</span>
+                        <p>Dynamic logo generator idea</p>
+                    </li>
+                    <li>
+                        <a href="./imageopt">Image Optimizer</a> <span>2025.07.16</span>
+                    </li>
+                    <li>
+                        <a href="./oscilloscope/">Oscilloscope</a> <span>2025.07.10</span>
+                        <p class="mt-0">Oscilloscope in javascript, to understand how they work</p>
+                    </li>
+                    <li>
+                        <a href="./placeholder">Placeholder</a> <span>2025.07.09</span>
+                        <p class="mt-0">Image generator with PHP API</p>
+                    </li>
+                    <li>
+                        <a href="./noise-gen/">Noise Generator</a>
+                        <span>2025.07.08</span>
+                        <p class="mt-0">Noise texture generator for CSS</p>
+                    </li>
+                    <li>
+                        <a href="./pantone/">Pantone</a>
+                        <span>2025.07.01</span>
+                        <p class="mt-0">Parametrized gradient background generator on elements specified elements</p>
+                    </li>
+                    <li>
+                        <a href="./visual-audio-processing/">Visual Audio Processing</a>
+                        <span>2025.06.15</span>
+                        <p class="mt-0">Simple implementation to understand audio processing with P5.js library</p>
+                    </li>
+                    <li>
+                        <a href="./honorarios/">Honorarios Calculator</a>
+                        <span>2025.01.01</span>
+                        <p class="mt-0">Calculator for mexican invoices with isr/iva retentions.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
 
-    <h3>todo</h3>
-    <ul>
-        <li>Anon Text/file sharing tool pastebin like</li>
-        <li>Cryptographic signature</li>
 </body>
 </html>
