--- a/web/sandbox/pantone/index.html
+++ b/web/sandbox/pantone/index.html
@@ -15,8 +15,8 @@
         margin:0
     }
     .gradient > * {
-      width: 100px;
-      height: 250px;
+      width: 10vw;
+      height: 50vh;
       display: inline-block;
       margin: 0px;
     }
@@ -36,17 +36,17 @@
 <div class="gradient" 
      start-color="255,0,0" 
      end-color="0,0,255" 
-     steps="20" 
+     steps="10" 
      inner-element="div">
 </div>
 
-<!-- Ejemplo 3: Verde a púrpura con p -->
+<!-- Ejemplo 3: Verde a púrpura con p 
 <div class="gradient" 
      start-color="0,255,0" 
      end-color="128,0,128" 
      steps="5" 
      inner-element="p">
-</div>
+</div> -->
 
 <script>
   function parseColor(attr) {
