--- a/web/sandbox/noise-gen/index.html
+++ b/web/sandbox/noise-gen/index.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-  <h2>🎛️ Generador de Ruido SVG</h2>
+  <h2>Generador de Ruido SVG</h2>
 
   <div class="controls">
     <label class="control-label">Ancho</label>
