cancelled api key because of 🤡

--- a/web/sandbox/translate/index.html
+++ b/web/sandbox/translate/index.html
@@ -21,7 +21,9 @@
         <button type="submit" id="boton_buscar">Buscar</button>
       </form>
       <div id="resultado"></div>
-      <div id="info_cancion" style="margin-top:20px; font-family: sans-serif;"></div>
+      <div id="datos_relevantes" style="margin-top:20px; font-family: sans-serif;"></div>
+      <div id="letra_original" style="margin-top:20px; font-family: sans-serif;"></div>
+      <div id="traduccion" style="margin-top:20px; font-family: sans-serif;"></div>
 
   <!-- Scripts -->
  <script type="module" src="./app.js"></script>
